# first-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: truth.db
data/curated/: ingest_0882a5763bad_schemes.jsonl  ingest_184868c40e9d_schemes.jsonl  ingest_268d668691d2_schemes.jsonl  ingest_487c74702871.jsonl  ingest_5507a1368f10_schemes.jsonl  ingest_5605683fb20b_schemes.jsonl  ingest_63d4d826a676_schemes.jsonl  ingest_683ee521c1c9_schemes.jsonl  ingest_76cb02b68213_schemes.jsonl  ingest_82fe233157c0_schemes.jsonl  ingest_b318f21ac18b_schemes.jsonl  ingest_d70cce7beaa9_schemes.jsonl  ingest_fedf2813efba_schemes.jsonl
data/metadata/: ingestion_runs.jsonl
data/raw/ingest_0882a5763bad/: scheme_master.json
frontend/: index.html
mf_rag/: __init__.py  models.py  phase1_runner.py  phase2_runner.py  phase3_runner.py  phase4_runner.py  policy.py
mf_rag/ingestion/: browser_fetch.py  groww_client.py  pipeline.py
mf_rag/orchestration/: __init__.py  events.py  freshness_engine.py
mf_rag/phases/: __init__.py
mf_rag/processing/: __init__.py  normalize.py
mf_rag/sample_data/: groww_schemes.json
mf_rag/storage/: __init__.py  cache_layer.py  structured_store.py  vector_store.py
scripts/: inspect_groww_page.py
tests/: test_phase0_policy.py  test_phase1_ingestion.py  test_phase1_live_scrape.py  test_phase2_orchestration.py  test_phase3_normalization.py  test_phase4_storage.py  test_phase5_retrieval.py  test_phase6_generation.py  test_phase7_api.py  test_phase8_security.py  test_phase9_monitoring.py
(+36 files in other folders)
