[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-rag-chatbot"
version = "0.1.0"
description = "Mutual fund RAG chatbot architecture implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "beautifulsoup4>=4.12",
  "playwright>=1.47",
  "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.28",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
